changed: localization approach

--- a/src/test/resources/localization/ru.properties
+++ b/src/test/resources/localization/ru.properties
@@ -1,1 +1,10 @@
-language.dropdown=\u044F\u0437\u044B\u043A
+# LANGUAGES
+russian.name=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+russian.abbreviation=ru
+english.name=English
+english.abbreviation=en
+
+
+# NAVIGATION
+navigation.menu.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
+navigation.menu.department.action=\u042D\u043A\u0448\u0435\u043D
