--- a/src/test/resources/localization/en.properties
+++ b/src/test/resources/localization/en.properties
@@ -1,1 +1,10 @@
-language.dropdown=language
+# LANGUAGES
+russian.name=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+russian.abbreviation=ru
+english.name=English
+english.abbreviation=en
+
+
+# NAVIGATION
+navigation.menu.categories=Categories
+navigation.menu.department.action=Action
