added: draft of 'SaveGame' test

--- a/src/test/resources/localization/en.properties
+++ b/src/test/resources/localization/en.properties
@@ -5,6 +5,11 @@ english.name=English
 english.abbreviation=en
 
 
-# NAVIGATION
-navigation.menu.categories=Categories
-navigation.menu.department.action=Action
+# NAVIGATION ELEMENTS
+navigationMenu.categories=Categories
+navigationMenuDepartment.action=Action
+saleItemsFragment.discounted=Discounted
+
+
+# NON-INTERACTIVE ELEMENTS
+pageTitle.action=Action
