--- a/src/test/resources/localization/ru.properties
+++ b/src/test/resources/localization/ru.properties
@@ -6,5 +6,10 @@ english.abbreviation=en
 
 
 # NAVIGATION
-navigation.menu.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
-navigation.menu.department.action=\u042D\u043A\u0448\u0435\u043D
+navigationMenu.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
+navigationMenuDepartment.action=\u042D\u043A\u0448\u0435\u043D
+saleItemsFragment.discounted=\u0421\u043E\u0020\u0441\u043A\u0438\u0434\u043A\u043E
+
+
+# NON-INTERACTIVE ELEMENTS
+pageTitle.action=\u042D\u043A\u0448\u0435\u043D
