--- a/src/test/resources/localization/en.properties
+++ b/src/test/resources/localization/en.properties
@@ -1,14 +1,20 @@
 # LANGUAGES
-russian.name=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
-russian.abbreviation=ru
-english.name=English
-english.abbreviation=en
+#russian.name=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+#russian.abbreviation=ru
+#english.name=English
+#english.abbreviation=en
+
+ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+en=English
 
 
 # NAVIGATION ELEMENTS
 navigationMenu.categories=Categories
 navigationMenuDepartment.action=Action
 saleItemsFragment.discounted=Discounted
+ageControlPage.day=11
+ageControlPage.month=June
+ageControlPage.year=1999
 
 
 # NON-INTERACTIVE ELEMENTS
