--- a/src/test/resources/localization/ru.properties
+++ b/src/test/resources/localization/ru.properties
@@ -1,14 +1,20 @@
 # LANGUAGES
-russian.name=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
-russian.abbreviation=ru
-english.name=English
-english.abbreviation=en
+#russian.name=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+#russian.abbreviation=ru
+#english.name=English
+#english.abbreviation=en
+
+ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+en=English
 
 
 # NAVIGATION
 navigationMenu.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
 navigationMenuDepartment.action=\u042D\u043A\u0448\u0435\u043D
 saleItemsFragment.discounted=\u0421\u043E\u0020\u0441\u043A\u0438\u0434\u043A\u043E
+ageControlPage.day=11
+ageControlPage.month=\u0438\u044E\u043D\u044F
+ageControlPage.year=1999
 
 
 # NON-INTERACTIVE ELEMENTS
